<resources>

    <string name="app_name">Z</string>
    <!--  -->
    <string name="main_message1">&#xe619;</string>
    <string name="main_message2">&#xe600;</string>
    <string name="main_contacts1">&#xe61b;</string>
    <string name="main_contacts2">&#xe61a;</string>
    <string name="main_store1">&#xe60d;</string>
    <string name="main_store2">&#xe60e;</string>
    <string name="main_my1">&#xe601;</string>
    <string name="main_my2">&#xe602;</string>
    <!--  -->
    <string name="dialog_checknet">网络已断开,请检查网络</string>
    <string name="dialog_exitapp">再按一次退出应用</string>
    <string name="toast_again_request">请求错误，请重试。</string>
    <string name="toast_checknet">当前网络不可用，请检查网络设置</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

</resources>